# seoul_cultural_data_analysis

./: .gitignore  README.md  data_visual.ipynb  pyproject.toml
