[tool.poetry]
name = "week03-advanced-2"
version = "0.1.0"
description = ""
authors = ["Gamchan Kang <104420634+gsgh3016@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
chardet = "^5.2.0"
openpyxl = "^3.1.5"
geopandas = "^1.0.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
